# BTorrent

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  main.cpp
.github/workflows/: test-cmake-multi-platform.yml
bt-core/: CMakeLists.txt  lib.cpp  lib.hpp  metainfo.cpp  metainfo.hpp  misc.cpp  misc.hpp  networking.cpp  torrent_metadata.cpp  torrent_metadata.hpp  utils.cpp  utils.hpp
bt-ui/: CMakeLists.txt  bt-ui.cpp  main.cpp  opensans_font.cpp  segoeui_font.cpp
bt-ui/assets/: README.md  icon.cpp
tests/: CMakeLists.txt  lib_test.cpp  metainfo_test.cpp  torrent_metadata_test.cpp  utils_test.cpp
tests/torrent_files/: india-pocket-map_archive.torrent  plain_text.txt
